--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,11 @@
   --font-color-hover: hsl(0, 0%, 40%);
 }
 
-.tsparticles-canvas-el {
+/* .tsparticles-canvas-el {
   position: inherit !important;
   min-height: 96vh;
 }
 
 #tsparticles {
   height: 100vh;
-}
+} */
